package LEBOCQTitouan.edu.model.commands.robot;

public class ConstructPipeCommand extends RobotCommand {
}
