package LEBOCQTitouan.edu.model.commands.robot;

public class CultivateCommand extends RobotCommand {
}
