package LEBOCQTitouan.edu.model.commands.robot;

import LEBOCQTitouan.edu.model.commands.Direction;

public class MoveRobotCommand extends RobotCommand {
    private Direction direction;
}
