package LEBOCQTitouan.edu.model.commands.robot.factory;

public enum RobotCommandType {
    MOVE,
    CONSTRUCT_PIPE,
    CULTIVATE,
    EXTRACT_ORE,
    EXTRACT_FOOD
}
