package LEBOCQTitouan.edu.model.commands.robot.ore;

public abstract class ExtractCommand {}
