package LEBOCQTitouan.edu.model.commands.robot.ore;

public class ExtractFoodCommand extends ExtractCommand {
}
