package LEBOCQTitouan.edu.model.commands.robot.ore;

public class ExtractOreCommand extends ExtractCommand {
}
