package LEBOCQTitouan.edu.model.commands.shockwave;

import LEBOCQTitouan.edu.model.entities.Shockwave;
import LEBOCQTitouan.edu.model.entities.planet.Planet;

public class PropagationShockwaveCommand {
    private Shockwave shockwave;
    private Planet planet;
}
